# bitfilters

./: CMakeLists.txt  LICENSE  Makefile  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  scheduled-1.5.yml
docs/: NEXT_README.md  README.md
scripts/: bootstrap-template.py
src/: bitfilters_binary_fuse_filter.cpp  bitfilters_bloom_filter.cpp  bitfilters_duckdb_bloom_filter.cpp  bitfilters_extension.cpp  bitfilters_quotient_filter.cpp  bitfilters_xor_filter.cpp  bloom_filter.cpp
src/include/: bitfilters_binary_fuse_filter.hpp  bitfilters_bloom_filter.hpp  bitfilters_duckdb_bloom_filter.hpp  bitfilters_extension.hpp  bitfilters_quotient_filter.hpp  bitfilters_xor_filter.hpp  bloom_filter.hpp
test/: README.md
test/generate/: generate_hash_values.py  generate_test.py  hash_values_v1.4.4.json  hash_values_v1.5.1.json  hash_values_v1.6.0.json  pyproject.toml
test/sql/: bitfilters.test  duckdb_bloom_filter.test
